--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset='utf-8'>
         <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <style>
             body {
