--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 text-align: center;
             }
 
-            .wrapper {
-                background-color: rgb(211, 204, 195);
+            img {
+                margin-bottom: 50px;
             }
         </style>
     </head>
     <body>
-        <div class="wrapper">
-            <h2>Тут скоро будет много интересного</h2>
-            <div>А пока сходите на <a href="http://www.moscowpython.ru/">moscowpython.ru</a> – там много интересного про Python.</div>
-        </div>
+        <h2>Тут скоро будет круто</h2>
+        <img src="static/images/star.png">
+        <div>А пока сходите на <a href="http://www.moscowpython.ru/">moscowpython.ru</a> – там много интересных докладов про Python.</div>
+        <div>Или гляньте <a href="https://www.facebook.com/groups/MoscowDjango/">нашу группу в Фейсбуке</a>, так вся движуха: анонсы, новости, вакансии, шуточки и котики.</div>
     </body>
 </html>
