--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         <h2>Тут скоро будет круто</h2>
         <img src="static/images/star.png">
         <div>А пока сходите на <a href="http://www.moscowpython.ru/">moscowpython.ru</a> – там много интересных докладов про Python.</div>
-        <div>Или гляньте <a href="https://www.facebook.com/groups/MoscowDjango/">нашу группу в Фейсбуке</a>, так вся движуха: анонсы, новости, вакансии, шуточки и котики.</div>
+        <div>Или гляньте <a href="https://www.facebook.com/groups/MoscowDjango/">нашу группу в Фейсбуке</a>, там вся движуха: анонсы, новости, вакансии, шуточки и котики.</div>
     </body>
 </html>
