добавил счётчик Яндекс.Метрики

--- a/index.html
+++ b/index.html
@@ -33,5 +33,35 @@
         <img src="static/images/star.png">
         <div>А пока сходите на <a href="http://www.moscowpython.ru/">moscowpython.ru</a> – там много интересных докладов про Python.</div>
         <div>Или гляньте <a href="https://www.facebook.com/groups/MoscowDjango/">нашу группу в Фейсбуке</a>, там вся движуха: анонсы, новости, вакансии, шуточки и котики.</div>
+
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (d, w, c) {
+            (w[c] = w[c] || []).push(function() {
+                try {
+                    w.yaCounter36362740 = new Ya.Metrika({
+                        id:36362740,
+                        clickmap:true,
+                        trackLinks:true,
+                        accurateTrackBounce:true
+                    });
+                } catch(e) { }
+            });
+
+            var n = d.getElementsByTagName("script")[0],
+                s = d.createElement("script"),
+                f = function () { n.parentNode.insertBefore(s, n); };
+            s.type = "text/javascript";
+            s.async = true;
+            s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+            if (w.opera == "[object Opera]") {
+                d.addEventListener("DOMContentLoaded", f, false);
+            } else { f(); }
+        })(document, window, "yandex_metrika_callbacks");
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/36362740" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
     </body>
 </html>
