--- a/index.html
+++ b/index.html
@@ -101,8 +101,16 @@
                     <div id="mc_embed_signup_scroll">
                     <h2></h2>
                 <div class="mc-field-group">
-                    <label for="mce-EMAIL">Email</label>
+                    <label for="mce-EMAIL">Email *</label>
                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                </div>
+                <div class="mc-field-group">
+                    <label for="mce-FNAME">Имя</label>
+                    <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+                </div>
+                <div class="mc-field-group">
+                    <label for="mce-LNAME">Фамилия</label>
+                    <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
                 </div>
                     <div id="mce-responses" class="clear">
                         <div class="response" id="mce-error-response" style="display:none"></div>
