--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             А вот и сами мы: <a href="https://www.facebook.com/val.dombrovsky" target="_blank">Валентин</a>,
                 <a href="https://www.facebook.com/korneevm" target="_blank">Михаил</a>,
                 <a href="https://www.facebook.com/profile.php?id=100000764232977" target="_blank">Илья</a>,
-                <a href="https://www.facebook.com/grigoryvp" target="_blank">Грирорий</a>,
+                <a href="https://www.facebook.com/grigoryvp" target="_blank">Григорий</a>,
                 <a href="https://www.facebook.com/pyhoster" target="_blank">Владимир</a>,
                 <a href="https://www.facebook.com/melevir" target="_blank">Илья</a>.
         </p>
