добавлен код ретаргетинга

--- a/index.html
+++ b/index.html
@@ -192,5 +192,6 @@
     </script>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script type="text/javascript">(window.Image ? (new Image()) : document.createElement('img')).src = location.protocol + '//vk.com/rtrg?r=rMFPKf5XsBOkyFnhVuuCB*sk2MtYdGxkHpF*/ydkYXmbvvXJXZCE0hZmetQgWrWd1umw7ylDNVS5Whv/pVUzLK0FT4Nrk*399Cy9nWwHw*RHMPDKusRyK0qifR5YFXy/iUv*LGjIB7HmGQ6crvbCv0j3eCS9NVHz5oDy4*FWvf0-';</script>
     </body>
 </html>
