square buttons, opensans font, fix grid margins

--- a/static_wireframes/index.html
+++ b/static_wireframes/index.html
@@ -38,13 +38,13 @@
     </div>
     <div class="container header-news">
       <div class="row">
-        <div class="col-md-7">  
+        <div class="col-md-8">  
           <p><img src="images/mars.png"></p>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-4 header-text">
           <h1>Выгружаем фото Марса с сайта NASA с помощью aiohttp</h1>
           <p>I am a huge fan of the book The Martian by Andy Weir. Reading it I wondered how did Mark Watney feel when he walked around the Red Planet.</p>
-          <button class="btn btn-primary">Читать полностью</button>
+          <button class="btn btn-primary btn-square">Читать полностью</button>
         </div>
       </div>
       <hr class="hr-divider">
@@ -72,7 +72,7 @@
           <h4>Moscow Python 114</h4>
           <p class="text"><b>Где:</b> офис Lamoda.ru (карта)<br>
                           <b>Темы:</b> салютогенерз, баннерная система Lamoda.ru, новости Python.</p>
-          <button class="btn">Регистрация</button>
+          <button class="btn btn-square">Регистрация</button>
         </div>
         <div class="col-md-4 mpc-label">
           <p class="img-container"><img src="images/mpc.png"></p>
@@ -95,10 +95,10 @@
           <form class="form row">
             <h3>Лучшая рассылка</h3>
             <div class="form-group col-md-6">
-              <input class="form-control" type="email" name="email">
+              <input class="form-control input-square" type="email" name="email">
             </div>
             <div class="col-md-2 form-group">
-              <button class="btn">Подписаться</button>
+              <button class="btn btn-square">Подписаться</button>
             </div>
             <div class="col-md-6">
               <p>Мы напишем, как будет что-то интересное, а спамить не будем, даже не просите.</p>
